--- a/pom.xml
+++ b/pom.xml
@@ -58,36 +58,16 @@
     </scm>
     <build>
         <plugins>
-
+            <plugin>
+                <!--for unit test-->
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>1.8.1</version>
             </plugin>
-
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-release-plugin</artifactId>-->
-            <!--                <version>2.5.3</version>-->
-            <!--                <configuration>-->
-            <!--                    <mavenExecutorId>forked-path</mavenExecutorId>-->
-            <!--                    <useReleaseProfile>false</useReleaseProfile>-->
-            <!--                    <arguments>-Psonatype-oss-release</arguments>-->
-            <!--                    <pushChanges>false</pushChanges>-->
-            <!--                    <localCheckout>false</localCheckout>-->
-            <!--                    <autoVersionSubmodules>true</autoVersionSubmodules>-->
-            <!--                    <checkModificationExcludes>-->
-            <!--                        <checkModificationExclude>pom.xml</checkModificationExclude>-->
-            <!--                    </checkModificationExcludes>-->
-            <!--                </configuration>-->
-            <!--                <dependencies>-->
-            <!--                    <dependency>-->
-            <!--                        <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                        <artifactId>maven-scm-plugin</artifactId>-->
-            <!--                        <version>1.8.1</version>-->
-            <!--                    </dependency>-->
-            <!--                </dependencies>-->
-            <!--            </plugin>-->
             <!--源代码-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
